--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,7 +99,7 @@
 
     <ListView
         android:id="@+id/view_history"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="346dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
@@ -108,5 +108,7 @@
         app:layout_constraintBottom_toTopOf="@+id/btn_userinfo"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linear_pbar" />
+        app:layout_constraintTop_toBottomOf="@+id/linear_pbar"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 </android.support.constraint.ConstraintLayout>
